| Bug #38018 | Maria: INSERT SELECT ON DUPLICATE KEY UPDATE, LOAD DATA REPLACE wrong lock | ||
|---|---|---|---|
| Submitted: | 10 Jul 2008 14:43 | Modified: | 11 Jul 2008 15:52 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Maria storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1-maria | OS: | Linux |
| Assigned to: | Guilhem Bichot | CPU Architecture: | Any |
[10 Jul 2008 14:43]
Guilhem Bichot
[10 Jul 2008 14:43]
Guilhem Bichot
We don't yet know if it's a real bug
[10 Jul 2008 14:54]
Guilhem Bichot
A first try of patch is at http://lists.mysql.com/maria/117 but was rejected.
[11 Jul 2008 14:24]
Sergei Golubchik
the same in MyISAM: bug#38046
[11 Jul 2008 14:50]
Guilhem Bichot
New patch for Maria http://lists.mysql.com/maria/122
[11 Jul 2008 15:52]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
[14 Sep 2008 5:55]
Bugs System
Pushed into 6.0.7-alpha (revid:guilhem@mysql.com-20080711143347-fm710xuabjecwymz) (version source revid:john.embretsen@sun.com-20080724122511-9c0oudz1xrdrs6y6) (pib:3)
